# rust-htmx

./: Cargo.toml
src/: main.rs
